Bring compare page up-to-date

--- a/city.html
+++ b/city.html
@@ -346,7 +346,7 @@
 				</div>
             </div>
             <hr />
-            <!-- Background -->
+            <!-- Background & OVerview -->
             <div class="row ninety row-eq-height">
 				<div class="col-xs-12 col-sm-6 col-md-6 col-lg-6">
 					<div class="panel">
@@ -501,7 +501,9 @@
                 </div>
           	</div>
             <br>
+			<!-- Food, Entertainment & Quality of Life Indexes -->
             <div class="row ninety">
+				<!-- Food -->
                 <div class="col-sm-4 col-md-4 col-lg-4">
                     <div class="panel">
                         <div class="panel-heading contribute-header">
@@ -514,6 +516,7 @@
                         </div>
                     </div>
                 </div>
+				<!-- Entertainment -->
                 <div class="col-sm-4 col-md-4 col-lg-4">
                     <div class="panel">
                         <div class="panel-heading contribute-header">
@@ -526,10 +529,11 @@
                         </div>
                     </div>
                 </div>
+				<!-- Quality of Life Indexes -->
 				<div class="col-sm-4 col-md-4 col-lg-4">
                     <div class="panel">
                         <div class="panel-heading">
-                            <h3 class="category-title"><span class="fa fa-trophy"></span>Quality of Life Indexes</h3>
+                            <h3 class="category-title"><span class="fa fa-trophy glyphicon"></span>Quality of Life Indexes</h3>
                         </div>
                         <hr>
                         <div class="panel-body" id="qualityOfLife"></div>
@@ -542,7 +546,7 @@
                 <div class=" col-xs-12 col-sm-12 col-md-12 col-lg-12 col-xl-12">
                     <div class="panel">
                         <div class="panel-heading">
-                            <h3 class="category-title"><span class="glyphicon glyphicon-flag"></span>Attractions</h3>
+                            <h3 class="category-title"><span class="glyphicon glyphicon-camera"></span>Attractions</h3>
                         </div>
                         <hr>
                         <div class="panel-body" id="attractions">
