--- a/city.html
+++ b/city.html
@@ -316,13 +316,13 @@
             <hr/>
             <!-- Header -->
             <div class="row ninety">
-                <div class="col-xs-12 col-sm-6 col-md-6 col-lg-8">
+                <div class="col-xs-12 col-sm-12 col-md-6 col-lg-8">
                     <header id="header" class="panel" >
                         <div id="header-text"></div>
                     </header>
                 </div>
 				<!--Map -->
-				<div class="col-xs-12 col-sm-6 col-md-6 col-lg-4">
+				<div class="col-xs-12 col-sm-12 col-md-6 col-lg-4">
 					<div class="panel" id="map-panel">
 						<div id="map-div"></div>
 						<script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDjvE18u3mbUrMqJQk7M_XSGlLJkbmnv5c"></script>
@@ -343,8 +343,9 @@
                         </div>
                     </div>
                 </div>
+			<!-- Overview -->	
 				<div class="col-xs-12 col-sm-6 col-md-6 col-lg-6">
-					<div class="panel">
+					<div class="panel needExSmallMargin">
 						<div class="panel-heading">
 							<h3 class="category-title"><span class="glyphicon glyphicon-pushpin"></span>Overview</h3>
 						</div>
@@ -418,7 +419,7 @@
 					</div>
 				</div>
 			</div>
-			<br>
+			<hr />
             <div class="row ninety">
                 <!-- Climate  -->
 				<div class="col-xs-12 col-sm-6 col-lg-6 col-md-8">
@@ -441,7 +442,7 @@
                 </div>
                 <!-- Languages  -->
                 <div class="col-xs-12 col-sm-6 col-lg-6 col-md-4">
-                    <div class="panel">
+                    <div class="panel needExSmallMargin">
                         <div class="panel-heading">
                             <h3 class="category-title"><span class="glyphicon glyphicon-bullhorn"></span>Languages</h3>
                         </div>
@@ -459,7 +460,8 @@
                     <div class="panel">
                         <div class="panel-heading contribute-header">
                             <h3 class="contribute-title"><span class="glyphicon glyphicon-road"></span>Transportation</h3>
-                            <a type="button"  class="btn btn-link contribute" data-toggle="modal" data-target="#transportationModal"><span class="glyphicon glyphicon-pencil"></span>Contribute</a>
+                            <a type="button"  class="btn btn-link 
+							" data-toggle="modal" data-target="#transportationModal"><span class="glyphicon glyphicon-pencil"></span><span class="contributeText">Contribute</span></a>
                         </div>
                         <hr>
                         <div class="panel-body" id="transportation"></div>
@@ -467,10 +469,10 @@
                 </div>
 				<!-- Housing -->
 				<div class="col-xs-12 col-sm-12 col-md-8 col-lg-8 col-xl-8">
-                    <div class="panel">
+                    <div class="panel needSmallMargin">
                         <div class="panel-heading contribute-header">
                             <h3 class="contribute-title"><span class="glyphicon glyphicon-home"></span>Housing and Utilities</h3>
-                            <a type="button"  class="btn btn-link contribute" data-toggle="modal" data-target="#housingUtilModal"><span class="glyphicon glyphicon-pencil"></span>Contribute</a>
+                            <a type="button"  class="btn btn-link contribute" data-toggle="modal" data-target="#housingUtilModal"><span class="glyphicon glyphicon-pencil"></span><span class="contributeText">Contribute</span></a>
 						</div>
                         <hr />
                         <div class="panel-body" id="housing">
@@ -484,13 +486,13 @@
                     </div>
                 </div>
           	</div>
-            <br>
+            <hr />
             <div class="row ninety">
-                <div class="col-sm-4 col-md-4 col-lg-4">
+                <div class=" col-xs-12 col-sm-4 col-md-4 col-lg-4">
                     <div class="panel">
                         <div class="panel-heading contribute-header">
                             <h3 class="contribute-title"><span class="glyphicon glyphicon-cutlery"></span>Food</h3>
-                            <a type="button"  class="btn btn-link contribute" data-toggle="modal" data-target="#foodModal"><span class="glyphicon glyphicon-pencil"></span>Contribute</a>
+                            <a type="button"  class="btn btn-link contribute" data-toggle="modal" data-target="#foodModal"><span class="glyphicon glyphicon-pencil"></span><span class="contributeText">Contribute</span></a>
                         </div>
                         <hr />
                         <div class="panel-body" id="food">
@@ -498,11 +500,11 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-sm-4 col-md-4 col-lg-4">
-                    <div class="panel">
+                <div class="col-xs-12 col-sm-4 col-md-4 col-lg-4">
+                    <div class="panel needExSmallMargin">
                         <div class="panel-heading contribute-header">
                             <h3 class="contribute-title"><span class="glyphicon glyphicon-film"></span>Entertainment</h3>
-                            <a type="button"  class="btn btn-link contribute" data-toggle="modal" data-target="#entertainmentModal"><span class="glyphicon glyphicon-pencil"></span>Contribute</a>
+                            <a type="button"  class="btn btn-link contribute" data-toggle="modal" data-target="#entertainmentModal"><span class="glyphicon glyphicon-pencil"></span><span class="contributeText">Contribute</span></a>
                         </div>
                         <hr>
                         <div class="panel-body" id="entertainment">
@@ -510,8 +512,8 @@
                         </div>
                     </div>
                 </div>
-				<div class="col-sm-4 col-md-4 col-lg-4">
-                    <div class="panel">
+				<div class=" col-xs-12 col-sm-4 col-md-4 col-lg-4">
+                    <div class="panel needExSmallMargin">
                         <div class="panel-heading">
                             <h3 class="category-title"><span class="fa fa-trophy"></span>Quality of Life Indexes</h3>
                         </div>
@@ -519,6 +521,7 @@
                         <div class="panel-body" id="qualityOfLife"></div>
                     </div>
                 </div>
+			
 			</div>
             <hr>
 			<div class="row ninety">
