--- a/city.html
+++ b/city.html
@@ -53,7 +53,7 @@
 						<li id="signOutButton"><a type="button" class="btn btn-link" onclick="signOut()"><span class="glyphicon glyphicon-user"></span> Sign Out</a></li>
                     </ul>
 					<ul class="nav navbar-nav navbar-right">
-                        <li class="active"><a href="index.html">Cities</a></li>
+                        <li><a href="index.html">Cities</a></li>
                         <li id="compareLink"><a href="compare.html">Compare</a></li>
                         <li><a href="#">About</a></li>
                     </ul>
@@ -301,13 +301,13 @@
                         <h2 id="top-info-area" class="margin10 top-info"></h2>
                     </div>
                 </div>
-                <div class="col-sm-6 col-lg-2 col-md-2 col-xs-6">
+                <div class="col-sm-4 col-lg-2 col-md-2 col-xs-6">
                     <div class="small-info">
                         <span><span class="glyphicon glyphicon-globe"></span>GDP</span>
                         <h2 id="top-info-gdp" class="margin10 top-info"></h2>
                     </div>
                 </div>
-                <div class="col-sm-6 col-lg-2 col-md-2 col-xs-6">
+                <div class="col-sm-4 col-lg-2 col-md-2 col-xs-6">
                     <div id="compareBox" class="small-info">
                         <button id="compare-button" type="button" class="btn btn-success center-block" onclick="compare()">Compare</button>
                     </div>
