--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
 			<div class="row">
 				<div class="col-lg-8 col-md-8 col-sm-12 col-xs-12 ">
 						<section id="section-carousel" class="row panel">
-							<div class="col-sm-12 col-lg-12 col-md-12" id="cityImageBox">
+							<div class="col-xs-12 col-sm-12 col-lg-12 col-md-12" id="cityImageBox">
 								<div class="carousel slide" data-ride="carousel">
 									<div class="carousel-inner" role="listbox">
 										<div class="item active" id="torontoItem"></div>
