--- a/compare.html
+++ b/compare.html
@@ -127,10 +127,10 @@
             <!-- Header -->
             <div class="row">
             	<div class="col-xs-12 col-sm-6 col-md-6 col-lg-6 col-xl-6">
-            		<h4 id="header-text1" class="city1">Toronto</h4>
+            		<h4 id="header-text1" class="city1"></h4>
             	</div>
             	<div class="col-xs-12 col-sm-6 col-md-6 col-lg-6 col-xl-6">
-            		<h4 id="header-text2" class="city2">Los Angeles</h4>
+            		<h4 id="header-text2" class="city2"></h4>
             	</div>
             </div>
             <hr />
@@ -217,12 +217,8 @@
                 <!-- City 1 -->
                 <div class="col-xs-12 col-sm-12 col-md-6 col-lg-6">
                     <div class="panel city1">
-<<<<<<< HEAD
-                        <div class="panel-heading"><h3 class="category-title"><span class="glyphicon glyphicon-book"></span>Background <span class="hide-content" class="cityNameTitle1"> </span></h3></div>
-=======
-                        <div class="panel-heading"><h3><span class="glyphicon glyphicon-book"></span>Background <span class="hide-content" class="cityNameTitle1"> </span></h3></div>
->>>>>>> 1ed546559a3dc2b33910ea505703a7ce0bcad484
-                        <hr />
+						<div class="panel-heading"><h3 class="category-title"><span class="glyphicon glyphicon-book"></span>Background <span class="hide-content cityNameTitle1"> </span></h3></div>
+						<hr />
                         <div class="panel-body">
                             <p id="background1"></p>
                         </div>
@@ -231,13 +227,8 @@
                 <!-- City 2 -->
                 <div class="col-xs-12 col-sm-12 col-md-6 col-lg-6">
                     <div class="panel city2">
-<<<<<<< HEAD
-                        <div class="panel-heading"><h3 class="category-title"><span class="glyphicon glyphicon-book"></span>Background <span class="hide-content" class="cityNameTitle2">asdfasd </span></h3> </div>
+						<div class="panel-heading"><h3 class="category-title"><span class="glyphicon glyphicon-book"></span>Background <span class="hide-content cityNameTitle2"></span></h3> </div>
                         <hr /> 
-=======
-                        <div class="panel-heading"><h3><span class="glyphicon glyphicon-book"></span>Background <span class="hide-content" class="cityNameTitle2"> </span> </h3> <span class="hide-content">sdfd</span></div>
-                        <hr />
->>>>>>> 1ed546559a3dc2b33910ea505703a7ce0bcad484
                         <div class="panel-body">
                             <p id="background2"></p>
                         </div>
@@ -251,7 +242,7 @@
 				<div class="col-xs-12 col-sm-12 col-md-6 col-lg-6">
 					<div class="panel city1">
 						<div class="panel-heading">
-							<h3 class="category-title"><span class="glyphicon glyphicon-pushpin"></span>Overview <span  class="hide-content" class="cityNameTitle1"> </span></h3>
+							<h3 class="category-title"><span class="glyphicon glyphicon-pushpin"></span>Overview <span  class="hide-content cityNameTitle1"> </span></h3>
 						</div>
 						<hr />
 						<div class="row">
@@ -326,7 +317,7 @@
 				<div class="col-xs-12 col-sm-12 col-md-6 col-lg-6">
 					<div class="panel city2">
 						<div class="panel-heading">
-							<h3 class="category-title"><span class="glyphicon glyphicon-pushpin"></span>Overview <span class="hide-content" class="cityNameTitle2"> </span></h3>
+							<h3 class="category-title"><span class="glyphicon glyphicon-pushpin"></span>Overview <span class="hide-content cityNameTitle2"> </span></h3>
 						</div>
 						<hr />
 						<div class="row">
@@ -405,7 +396,7 @@
 				<div class="col-xs-12 col-sm-12 col-lg-6 col-md-6">
                    <div class="panel city1">
                         <div class="panel-heading">
-                            <h3 class="category-title"><span class="glyphicon glyphicon-cloud"></span>Climate<span class="hide-content" class="cityNameTitle1"> </span></h3>
+                            <h3 class="category-title"><span class="glyphicon glyphicon-cloud"></span>Climate<span class="hide-content cityNameTitle1"> </span></h3>
                         </div>
                         <hr/>
 						<div class="panel-body" id="climate">
@@ -424,7 +415,7 @@
 				<div class="col-xs-12 col-sm-12 col-lg-6 col-md-6">
                    <div class="panel city2">
                         <div class="panel-heading">
-                            <h3 class="category-title"><span class="glyphicon glyphicon-cloud"></span>Climate<span class="hide-content" class="cityNameTitle2"> </span></h3>
+                            <h3 class="category-title"><span class="glyphicon glyphicon-cloud"></span>Climate<span class="hide-content cityNameTitle2"> </span></h3>
                         </div>
                         <hr/>
 						<div class="panel-body" id="climate">
@@ -447,7 +438,7 @@
                 <div class="col-xs-12 col-sm-12 col-lg-6 col-md-6">
                     <div class="panel city1">
                         <div class="panel-heading">
-                            <h3 class="category-title"><span class="glyphicon glyphicon-bullhorn"></span>Languages <span class="hide-content" class="cityNameTitle1"> </span></h3>
+                            <h3 class="category-title"><span class="glyphicon glyphicon-bullhorn"></span>Languages <span class="hide-content cityNameTitle1"> </span></h3>
                         </div>
                         <hr/>
                         <div class="panel-body" id="languages">
@@ -459,7 +450,7 @@
                 <div class="col-xs-12 col-sm-12 col-lg-6 col-md-6">
                     <div class="panel city2">
                         <div class="panel-heading">
-                            <h3 class="category-title"><span class="glyphicon glyphicon-bullhorn"></span>Languages <span class="hide-content" class="cityNameTitle2"> </span></h3>
+                            <h3 class="category-title"><span class="glyphicon glyphicon-bullhorn"></span>Languages <span class="hide-content cityNameTitle2"> </span></h3>
                         </div>
                         <hr/>
                         <div class="panel-body" id="languages">
@@ -475,7 +466,7 @@
 				<div class="col-xs-12 col-sm-12 col-md-6 col-lg-6 col-xl-6">
                     <div class="panel city1">
                         <div class="panel-heading contribute-header">
-                            <h3 class="category-title"><span class="glyphicon glyphicon-road"></span>Transportation <span class="hide-content" class="cityNameTitle1"> </span></h3>
+                            <h3 class="category-title"><span class="glyphicon glyphicon-road"></span>Transportation <span class="hide-content cityNameTitle1"> </span></h3>
                         </div>
                         <hr>
                         <div class="panel-body" id="transportation1"></div>
@@ -485,7 +476,7 @@
 				<div class="col-xs-12 col-sm-12 col-md-6 col-lg-6 col-xl-6">
                     <div class="panel city2">
                         <div class="panel-heading contribute-header">
-                            <h3 class="category-title"><span class="glyphicon glyphicon-road"></span>Transportation <span class="hide-content" class="cityNameTitle2"> </span></h3>
+                            <h3 class="category-title"><span class="glyphicon glyphicon-road"></span>Transportation <span class="hide-content cityNameTitle2"> </span></h3>
                         </div>
                         <hr>
                         <div class="panel-body" id="transportation2"></div>
@@ -499,13 +490,14 @@
 				<div class="col-xs-12 col-sm-12 col-md-6 col-lg-6 col-xl-6">
                     <div class="panel city1">
                         <div class="panel-heading contribute-header">
-                            <h3 class="category-title"><span class="glyphicon glyphicon-home"></span>Housing and Utilities <span class="hide-content" class="cityNameTitle1"> </span></h3>
+                            <h3 class="category-title"><span class="glyphicon glyphicon-home"></span>Housing and Utilities <span class="hide-content cityNameTitle1"> </span></h3>
 						</div>
                         <hr />
                         <div class="panel-body" id="housing">
 							<div class="row">
 								<div class="col-xs-6 col-sm-6 col-md-6 col-lg-6" id="housingDisplay1"></div>
 								<div class="col-xs-6 col-sm-6 col-md-6 col-lg-6">
+									  <h4 id="utilities-total-header1"></h4>
 									 <div id="utilities-chart-div1" class="chart"></div>
 								</div>
 							</div>
@@ -516,13 +508,14 @@
 				<div class="col-xs-12 col-sm-12 col-md-6 col-lg-6 col-xl-6">
                     <div class="panel city2">
                         <div class="panel-heading contribute-header">
-                            <h3 class="category-title"><span class="glyphicon glyphicon-home"></span>Housing and Utilities <span class="hide-content" class="cityNameTitle2"> </span></h3>
+                            <h3 class="category-title"><span class="glyphicon glyphicon-home"></span>Housing and Utilities <span class="hide-content cityNameTitle2"> </span></h3>
 						</div>
                         <hr />
                         <div class="panel-body" id="housing">
 							<div class="row">
 								<div class="col-xs-6 col-sm-6 col-md-6 col-lg-6" id="housingDisplay2"></div>
 								<div class="col-xs-6 col-sm-6 col-md-6 col-lg-6">
+									  <h4 id="utilities-total-header2"></h4>
 									 <div id="utilities-chart-div2" class="chart"></div>
 								</div>
 							</div>
@@ -537,7 +530,7 @@
 				<div class="col-xs-12 col-sm-12 col-md-6 col-lg-6">
                     <div class="panel city1">
                         <div class="panel-heading contribute-header">
-                            <h3 class="category-title"><span class="glyphicon glyphicon-cutlery"></span>Food <span class="hide-content" class="cityNameTitle1"> </span></h3>
+                            <h3 class="category-title"><span class="glyphicon glyphicon-cutlery"></span>Food <span class="hide-content cityNameTitle1"> </span></h3>
                         </div>
                         <hr />
                         <div class="panel-body" id="food1"></div>
@@ -547,7 +540,7 @@
 				<div class="col-xs-12 col-sm-12 col-md-6 col-lg-6">
                     <div class="panel city2">
                         <div class="panel-heading contribute-header">
-                            <h3 class="category-title"><span class="glyphicon glyphicon-cutlery"></span>Food <span class="hide-content" class="cityNameTitle2"> </span></h3>
+                            <h3 class="category-title"><span class="glyphicon glyphicon-cutlery"></span>Food <span class="hide-content cityNameTitle2"> </span></h3>
                         </div>
                         <hr />
                         <div class="panel-body" id="food2"></div>
@@ -561,7 +554,7 @@
 				<div class="col-xs-12 col-sm-12 col-md-6 col-lg-6">
                     <div class="panel city1">
                         <div class="panel-heading contribute-header">
-                            <h3 class="category-title"><span class="glyphicon glyphicon-film"></span>Entertainment <span class="hide-content" class="cityNameTitle1"> </span></h3>
+                            <h3 class="category-title"><span class="glyphicon glyphicon-film"></span>Entertainment <span class="hide-content cityNameTitle1"> </span></h3>
                         </div>
                         <hr>
                         <div class="panel-body" id="entertainment">
@@ -573,7 +566,7 @@
 				<div class=" col-xs-12 col-sm-12 col-md-6 col-lg-6">
                     <div class="panel city2">
                         <div class="panel-heading contribute-header">
-                            <h3 class="category-title"><span class="glyphicon glyphicon-film"></span>Entertainment <span class="hide-content" class="cityNameTitle2"> </span></h3>
+                            <h3 class="category-title"><span class="glyphicon glyphicon-film"></span>Entertainment <span class="hide-content cityNameTitle2"> </span></h3>
                         </div>
                         <hr>
                         <div class="panel-body" id="entertainment">
@@ -589,7 +582,7 @@
 				<div class="col-xs-12 col-sm-12 col-md-6 col-lg-6">
                     <div class="panel city1">
                         <div class="panel-heading">
-                            <h3 class="category-title"><span class="fa fa-trophy glyphicon"></span>Quality of Life Indexes <span class="hide-content" class="cityNameTitle1"> </span></h3>
+                            <h3 class="category-title"><span class="fa fa-trophy glyphicon"></span>Quality of Life Indexes <span class="hide-content cityNameTitle1"> </span></h3>
                         </div>
                         <hr>
                         <div class="panel-body" id="qualityOfLife1"></div>
@@ -599,7 +592,7 @@
 				<div class="col-xs-12 col-sm-12 col-md-6 col-lg-6">
                     <div class="panel city2">
                         <div class="panel-heading">
-                            <h3 class="category-title"><span class="fa fa-trophy glyphicon"></span>Quality of Life Indexes <span class="hide-content" class="cityNameTitle2"> </span></h3>
+                            <h3 class="category-title"><span class="fa fa-trophy glyphicon"></span>Quality of Life Indexes <span class="hide-content cityNameTitle2"> </span></h3>
                         </div>
                         <hr>
                         <div class="panel-body" id="qualityOfLife2"></div>
@@ -613,7 +606,7 @@
 				<div class=" col-xs-12 col-sm-12 col-md-6 col-lg-6 col-xl-6">
                     <div class="panel city1">
                         <div class="panel-heading">
-                            <h3 class="category-title"><span class="glyphicon glyphicon-camera"></span>Attractions <span class="hide-content" class="cityNameTitle1"> </span></h3>
+                            <h3 class="category-title"><span class="glyphicon glyphicon-camera"></span>Attractions <span class="hide-content cityNameTitle1"> </span></h3>
                         </div>
                         <hr>
                         <div class="panel-body" id="attractions1"></div>
@@ -623,7 +616,7 @@
 				<div class=" col-xs-12 col-sm-12 col-md-6 col-lg-6 col-xl-6">
                     <div class="panel city2">
                         <div class="panel-heading">
-                            <h3 class="category-title"><span class="glyphicon glyphicon-camera"></span>Attractions <span class="hide-content" class="cityNameTitle2"> </span></h3>
+                            <h3 class="category-title"><span class="glyphicon glyphicon-camera"></span>Attractions <span class="hide-content cityNameTitle2"> </span></h3>
                         </div>
                         <hr>
                         <div class="panel-body" id="attractions2"></div>
